# vibevoice-realtimeFASTAPI

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  FORK-NOTES.md  LICENSE  README.md  benchmark.py  benchmark_streaming.py  docker-compose.yml  improvements.md  plan.md  pyproject.toml  test_lavasr.py  test_quality.py  test_runner.py  test_text_processing.py
overrides/: app.py  flashsr_upsampler.py  index.html  lavasr_upsampler.py  novasr_upsampler.py  realtime_model_inference_from_file.py  text_processing.py  vibevoice_realtime_demo.py
overrides/lavasr/: model.py  utils.py
overrides/lavasr/denoiser/: denoiser.py  ulunas.py
overrides/lavasr/enhancer/: enhancer.py  linkwitz_merge.py
overrides/novasr/: __init__.py  activations.py  commons.py  resample.py  speechsr.py
runner/: __init__.py  adapter_factory.py  errors.py  model_registry.py  types.py
runner/adapters/: __init__.py  base.py  longform_native.py  realtime_demo.py
scripts/: batch_generate_demos.py  benchmark_7b.py  benchmark_stream_endpoint.py  download_model.py  install_systemd_service.sh  quality_check_7b.py  run_realtime_demo.py  run_server.py  test_flash_attention.py  test_spanish_parakeet.py
voices/: streaming_model
