[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibevoice-runner"
version = "0.1.0"
description = "Local TTS runner for Microsoft VibeVoice - Open-WebUI compatible, privacy-first with uv"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Keep HF Hub <1.0 to satisfy transformers' constraints used by VibeVoice.
    "huggingface_hub>=0.30.0,<1.0",
    # Ensure uv manages VibeVoice + its dependency set (prevents uv from \"undoing\" the env).
    "inflect>=7.5.0",
    "vibevoice",
    # Audio processing
    "librosa>=0.10.0",
    # LavaSR super-resolution dependencies
    "vocos>=0.1.0",
    "einops>=0.8.0",
]

[tool.setuptools]
# Prevent setuptools from trying to treat top-level folders like `models/` and `third_party/`
# as importable packages when uv installs this project.
py-modules = ["main"]

[tool.uv.sources]
vibevoice = { path = "third_party/VibeVoice", editable = true }
